--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </div>
                 <div class="contact-info">
                     <i class="fa fa-linkedin"></i>
-                    <a href="https://www.linkedin.com/in/syedabrar0635/" target="_blank">linkedin.com/in/syedabrar0635/</a>
+                    <a href="https://www.linkedin.com/in/syedabrar0635/" target="_blank">linkedin.com/in/syedabrar0635</a>
                 </div>
                 <div class="contact-info">
-                    <i class="fa fa-user"></i>
-                    <a href="https://abrar408portfolio.netlify.app/" target="_blank">abrar408portfolio.netlify.app/</a>
+                    <i class="fa fa-globe"></i>
+                    <a href="https://abrarsportfolio.netlify.app/" target="_blank">abrarsportfolio.netlify.app</a>
                 </div>
             </section>
 
@@ -55,9 +55,9 @@
             </section>
             <section class="education">
                 <h2>EDUCATION</h2>
-                <h3><strong>BE Electrical Engineering</strong></h3>
-                <h4>National University of Science and Technology</h4>
-                <h5>Sep 2016 - July 2020</h5>
+                <h3>BE Electrical Engineering</h3>
+                <p>National University of Science and Technology</p>
+                <p>Sep 2016 - July 2020</p>
             </section>
             <section class="skills">
                 <h2>SKILLS</h2>
@@ -77,32 +77,29 @@
         <div class="right">
             <section class="projects">
                 <h2>PROJECTS</h2>
-                <ul class="right-list">
-                    <li>
-                        <h1>Bank Management Application</h1>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h1>Task Management Application</h1>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h1>Social Media Application</h1>
-                        <p></p>
-                    </li>
-                </ul>                
+                <h3>Bank Management Application</h3>
+                <p>Freelance project using ReactJS on frontend, NodeJS coupled with ExpressJS on backend and sqlite3 for database. The goal was to make an application capable of maintaining all transactions made by each user to different accounts, generation of bank statements for each user, ability to create, pay utility bills through the application and creating access control for different users according to their role. 
+                </p>
+                <h3>Task Management Application</h3>
+                <p>Developed a task management web application for my final project at Contour MERN stack bootcamp in which Social Login was implemented using PassportJS and SOCKET.IO was used to update users of new notifications. Only the user with administrator role can create tasks and delegate to different users with specific due-date which have to be submitted back for review before it can be cleared. <strong>No UI library was used for this project.</strong> The structure of the application and all icons used were done purely through HTML and CSS
+                </p>              
             </section>
             <section class="courses">
                 <h2>PROFESSIONAL COURSES</h2>
-                <ul class="right-list">
-                    <li></li>
-                    <li></li>
-                </ul>
+                <h3>CONTOUR SOFTWARE: MERN STACK DEVELOPMENT BOOTCAMP</h3>
+                <p>The 3-month industry led MERN stack bootcamp covers the basics of web development and the MERN stack through hands-on exercises and projects. It includes introduction to web development, MongoDB, ExpressJS, ReactJS, NodeJS, Authentication and Authorization. Students will work on a final project utilizing the technologies learned throughout the course</p>
+                <h3>EDX: CS50 INTRODUCTION TO COMPUTER SCIENCE</h3>
+                <p>An introductory course of computer science. The course covers topic such as algorithms, data structures, and web development. It covers the languages like C, Python, JavaScript and SQL The course also includes a hands-on approach to problem-solving on a variety of programming projects throughout the course.</p>
             </section>
-            <footer></footer>
+            <footer>
+                <ul class="list">
+                    <li>
+                        <em><p>This resume is made using HTML5 and CSS3, available on my portfolio at <strong>abrarsportfolio.netlify.app</strong></p></em>
+                    </li>
+                </ul>
+                
+            </footer>
         </div>
-    </div>
-
-    
+    </div>    
 </body>
 </html>
