--- a/index.html
+++ b/index.html
@@ -67,21 +67,37 @@
                     <li>Javascript</li>
                     <li>ExpressJS</li>
                     <li>MongoDB</li>
-                    <li>sqlite</li>
+                    <li>MySQL</li>
                     <li>HTML5</li>
                     <li>CSS3</li>
                     <li>Material UI</li>
                 </ul>
             </section>
         </div>
-        <div class="right">
+        <div class="right">            
+            <section class="experience">
+                <h2>WORK EXPERIENCE</h2>
+                <div class="exp-span">
+                    <h3>Backend Engineer, <div class="company">Internative Labs</div></h3>
+                    <h5 class="company">05/2023 - Present</h5>
+                </div>
+                <p>
+                    <ul class="list">
+                        <li>Develop and maintain server-side applications using Node.js and Express.js frameworks.</li>
+                        <li>Collaborate with cross-functional teams to design and implement RESTful APIs for seamless integration with frontend systems.</li>
+                        <li>Implement database models and handle data manipulation using MySQL.</li>
+                        <li>Work closely with frontend developers to ensure smooth API integrations and resolve any backend-related issues.</li>
+                    </ul>
+                </p>             
+            </section>
             <section class="projects">
                 <h2>PROJECTS</h2>
-                <h3>Bank Management Application</h3>
-                <p>Freelance project using ReactJS on frontend, NodeJS coupled with ExpressJS on backend and sqlite3 for database. The goal was to make an application capable of maintaining all transactions made by each user to different accounts, generation of bank statements for each user, ability to create, pay utility bills through the application and creating access control for different users according to their role. 
-                </p>
-                <h3>Task Management Application</h3>
-                <p>Developed a task management web application for my final project at Contour MERN stack bootcamp in which Social Login was implemented using PassportJS and SOCKET.IO was used to update users of new notifications. Only the user with administrator role can create tasks and delegate to different users with specific due-date which have to be submitted back for review before it can be cleared. <strong>No UI library was used for this project.</strong> The structure of the application and all icons used were done purely through HTML and CSS
+                <div class="exp-span">
+                    <h3>Zenith Novels</h3>
+                    <a href="https://zenith-novels-frontend.vercel.app/" target="_blank"><span>"https://zenith-novels-frontend.vercel.app/"</span></a>
+                </div>    
+                <p>
+                    Developed the backend of the Zenith Novels project using Express.js and Node.js. My role involved ensuring high performance and scalability, implementing secure user authentication and authorization through JWT and Passport.js. I designed and developed RESTful APIs for user management, book publishing, and payment processing. Additionally, I integrated MySql for efficient data storage and retrieval, optimizing queries to enhance overall system performance.
                 </p>              
             </section>
             <section class="courses">
