--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             <section class="skills">
                 <h2>SKILLS</h2>
                 <ul class="list">
-                    <li>ReactJS</li>
-                    <li>NodeJS</li>
                     <li>Javascript</li>
+                    <li>NodeJS</li>
                     <li>ExpressJS</li>
-                    <li>MongoDB</li>
+                    <li>Prisma</li>
                     <li>MySQL</li>
+                    <li>MongoDB</li>
+                    <li>ReactJS</li>
                     <li>HTML5</li>
                     <li>CSS3</li>
-                    <li>Material UI</li>
                 </ul>
             </section>
         </div>
@@ -82,39 +82,41 @@
                     <h5 class="company">05/2023 - Present</h5>
                 </div>
                 <p>
-                    <ul class="list">
-                        <li>Develop and maintain server-side applications using Node.js and Express.js frameworks.</li>
-                        <li>Collaborate with cross-functional teams to design and implement RESTful APIs for seamless integration with frontend systems.</li>
-                        <li>Implement database models and handle data manipulation using MySQL.</li>
-                        <li>Work closely with frontend developers to ensure smooth API integrations and resolve any backend-related issues.</li>
-                    </ul>
+                    I am entrusted with the development and maintenance of high-performance server-side applications. My track record showcases successful collaboration with cross-functional teams to design and implement RESTful APIs, guaranteeing seamless integration with frontend systems. Adept at handling data manipulation and proficient in MySQL, I prioritize optimizing data processing efficiency. I work closely with frontend developers to ensure smooth API integrations and promptly resolve any backend-related challenges.
                 </p>             
             </section>
             <section class="projects">
                 <h2>PROJECTS</h2>
                 <div class="exp-span">
-                    <h3>Zenith Novels</h3>
-                    <a href="https://zenith-novels-frontend.vercel.app/" target="_blank"><span>"https://zenith-novels-frontend.vercel.app/"</span></a>
+                    <h3><u>Zenith Novels</u></h3>
+                    <a href="https://zenithnovels.com" target="_blank"><span>https://zenithnovels.com</span></a>
                 </div>    
                 <p>
-                    Developed the backend of the Zenith Novels project using Express.js and Node.js. My role involved ensuring high performance and scalability, implementing secure user authentication and authorization through JWT and Passport.js. I designed and developed RESTful APIs for user management, book publishing, and payment processing. Additionally, I integrated MySql for efficient data storage and retrieval, optimizing queries to enhance overall system performance.
-                </p>              
+                    Developed the backend of the Zenith Novels project using Express.js and Node.js, where users can publish original or fan-fiction novels and comics. I designed and developed <strong>RESTful APIs</strong> for user management, book publishing, <strong>Stripe-payment integration</strong> and other features of the platform.
+                </p>    
+                <div class="exp-span">
+                    <h3><u>Internative Traders</u></h3>
+                    <a href="https://internative-traders.vercel.app" target="_blank"><span>https://internative-traders.vercel.app</span></a>
+                </div>    
+                <p>
+                    Developed the backend of the Internative Traders project. My role involved ensuring high performance and scalability, implementing secure user authentication and authorization through JWT, Passport.js for social logins, <strong>Firebase Cloud Messaging</strong> for sending push and web notifications, among other features. MySQL was used for efficient data storage and retrieval.
+                </p>           
             </section>
             <section class="courses">
                 <h2>PROFESSIONAL COURSES</h2>
                 <h3>CONTOUR SOFTWARE: MERN STACK DEVELOPMENT BOOTCAMP</h3>
-                <p>The 3-month industry led MERN stack bootcamp covers the basics of web development and the MERN stack through hands-on exercises and projects. It includes introduction to web development, MongoDB, ExpressJS, ReactJS, NodeJS, Authentication and Authorization. Students will work on a final project utilizing the technologies learned throughout the course</p>
+                <p>The 3-month industry led MERN stack bootcamp covered the basics of web development and the MERN stack through hands-on exercises and projects. It included introduction to web development, MongoDB, ExpressJS, ReactJS, NodeJS, Authentication and Authorization and much more.</p>
                 <h3>EDX: CS50 INTRODUCTION TO COMPUTER SCIENCE</h3>
-                <p>An introductory course of computer science. The course covers topic such as algorithms, data structures, and web development. It covers the languages like C, Python, JavaScript and SQL The course also includes a hands-on approach to problem-solving on a variety of programming projects throughout the course.</p>
+                <p>An introductory course of computer science. The course covers topics such as algorithms, data structures, and web development. It covers the languages like C, Python, JavaScript and SQL The course also includes a hands-on approach to problem-solving on a variety of programming projects throughout the course.</p>
             </section>
-            <footer>
+            <!-- <footer>
                 <ul class="list">
                     <li>
                         <em><p>This resume is made using HTML5 and CSS3, available on my portfolio at <strong>abrarsportfolio.netlify.app</strong></p></em>
                     </li>
                 </ul>
                 
-            </footer>
+            </footer> -->
         </div>
     </div>    
 </body>
