--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <h1>SYED ABRAR ALI</h1>
-        <h3>MERN STACK DEVELOPER</h3>
+        <h3>FULL STACK DEVELOPER</h3>
     </header>
     <div class="section-line"></div>
     <div class="content">
@@ -42,82 +42,98 @@
             </section>
 
             <section class="profile">
-                <h2>PROFILE</h2>
-                <p>MERN Stack Developer with experience in
-                    building full-stack web applications using
-                    MongoDB, ExpressJS, ReactJS, and
-                    NodeJS. Strong understanding of
-                    JavaScript and its modern frameworks
-                    and libraries. Proficient in developing
-                    RESTful APIs and integrating them with
-                    front-end systems
+                <h2>SUMMARY</h2>
+                <p>Full Stack Developer experienced in building web applications. Strong JavaScript knowledge, including modern frameworks. Proficient in RESTful API development and front-end integration.
                     </p>
             </section>
             <section class="education">
                 <h2>EDUCATION</h2>
-                <h3>BE Electrical Engineering</h3>
+                <h4>BE Electrical Engineering</h4>
                 <p>National University of Science and Technology</p>
                 <p>Sep 2016 - July 2020</p>
             </section>
             <section class="skills">
-                <h2>SKILLS</h2>
+                <h2>SOFT SKILLS</h2>
+                <ul class="list">
+                    <li>Communication</li>
+                    <li>Collaboration</li>
+                    <li>Time Management</li>                    
+                    <li>Problem solving</li>                    
+                </ul>   
+                <h2>HARD SKILLS</h2>
                 <ul class="list">
                     <li>Javascript</li>
                     <li>NodeJS</li>
                     <li>ExpressJS</li>
-                    <li>Prisma</li>
                     <li>MySQL</li>
                     <li>MongoDB</li>
                     <li>ReactJS</li>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
                 </ul>
             </section>
         </div>
         <div class="right">            
             <section class="experience">
-                <h2>WORK EXPERIENCE</h2>
+                <h2>PROFESSIONAL EXPERIENCE</h2>
                 <div class="exp-span">
                     <h3>Backend Engineer, <div class="company">Internative Labs</div></h3>
-                    <h5 class="company">05/2023 - Present</h5>
+                    <h5 class="company">May 2023 - Present</h5>
                 </div>
-                <p>
-                    I am entrusted with the development and maintenance of high-performance server-side applications. My track record showcases successful collaboration with cross-functional teams to design and implement RESTful APIs, guaranteeing seamless integration with frontend systems. Adept at handling data manipulation and proficient in MySQL, I prioritize optimizing data processing efficiency. I work closely with frontend developers to ensure smooth API integrations and promptly resolve any backend-related challenges.
-                </p>             
+                <ul class="bullets">
+                    <li>Develop and maintain high-performance server-side applications</li>
+                    <li>Work closely with front-end developers to ensure smooth API integrations</li>
+                    <li>Prioritize data processing efficiency</li>
+                    <li>Resolve backend challenges promptly</li>
+                </ul>          
             </section>
             <section class="projects">
-                <h2>PROJECTS</h2>
+                <h2>PROJECTS</h2>                
                 <div class="exp-span">
-                    <h3><u>Zenith Novels</u></h3>
-                    <a href="https://zenithnovels.com" target="_blank"><span>https://zenithnovels.com</span></a>
+                    <h3>Zenith Novels</h3>
+                    <a href="https://zenithnovels.com" target="_blank"><span><u>zenithnovels.com</u></span></a>
                 </div>    
-                <p>
-                    Developed the backend of the Zenith Novels project using Express.js and Node.js, where users can publish original or fan-fiction novels and comics. I designed and developed <strong>RESTful APIs</strong> for user management, book publishing, <strong>Stripe-payment integration</strong> and other features of the platform.
-                </p>    
+                <ul class="bullets">
+                    <li>Developed the backend of the Zenith Novels project using Express.js</li>
+                    <li>Enabled users to publish original or fan-fiction novels and comics</li>
+                    <li>Designed and implemented RESTful APIs for user management, book publishing, Stripe payments, and more platform features</li>
+                </ul>
                 <div class="exp-span">
-                    <h3><u>Internative Traders</u></h3>
-                    <a href="https://internative-traders.vercel.app" target="_blank"><span>https://internative-traders.vercel.app</span></a>
+                    <h3>Amamsoft ERP</h3>
                 </div>    
-                <p>
-                    Developed the backend of the Internative Traders project. My role involved ensuring high performance and scalability, implementing secure user authentication and authorization through JWT, Passport.js for social logins, <strong>Firebase Cloud Messaging</strong> for sending push and web notifications, among other features. MySQL was used for efficient data storage and retrieval.
-                </p>           
+               <ul class="bullets">
+                <li>ERP desktop application for retail and wholesale businesses</li>
+                <li>Tracks inventory, employees, sales, profits and much more</li>
+                <li>Generates insightful reports</li>
+               </ul>                          
+            </section>
+            <section class="open-source">
+                <h2>OPEN SOURCE</h2>
+                <h3>express-genie</h3>
+                <ul class="bullets">
+                    <li>An <strong>npm package</strong> for Node.js and Express.js applications</li>
+                    <li>It automates the process of setting up the necessary folders and files</li>
+                    <li>It saves time by eliminating the need to manually create each file and folder</li>
+                    <li>The package helps with tasks like starting a new server instance, configuring middleware, and setting up error handling</li>
+                </ul>          
             </section>
             <section class="courses">
                 <h2>PROFESSIONAL COURSES</h2>
-                <h3>CONTOUR SOFTWARE: MERN STACK DEVELOPMENT BOOTCAMP</h3>
-                <p>The 3-month industry led MERN stack bootcamp covered the basics of web development and the MERN stack through hands-on exercises and projects. It included introduction to web development, MongoDB, ExpressJS, ReactJS, NodeJS, Authentication and Authorization and much more.</p>
-                <h3>EDX: CS50 INTRODUCTION TO COMPUTER SCIENCE</h3>
-                <p>An introductory course of computer science. The course covers topics such as algorithms, data structures, and web development. It covers the languages like C, Python, JavaScript and SQL The course also includes a hands-on approach to problem-solving on a variety of programming projects throughout the course.</p>
+                <h3>MERN Stack Bootcamp</h3>                
+                <ul class="bullets">
+                    <li>3 month industry-led bootcamp at <strong>Contour Software</strong></li>
+                    <li>Supported by <strong>PSEB</strong> and <strong>P@ASHA</strong></li>
+                    <li>Acquired comprehensive web development expertise</li>
+                    <li>Participated in hands-on exercises and real-world projects to enhance practical skills</li>
+                </ul>          
             </section>
-            <!-- <footer>
-                <ul class="list">
-                    <li>
-                        <em><p>This resume is made using HTML5 and CSS3, available on my portfolio at <strong>abrarsportfolio.netlify.app</strong></p></em>
-                    </li>
-                </ul>
-                
-            </footer> -->
         </div>
     </div>    
+    <footer>
+        <ul class="list">
+            <li>
+                <em><p>This resume is made using HTML5 and CSS3, available on my portfolio at <strong>abrarsportfolio.netlify.app</strong></p></em>
+            </li>
+        </ul>
+        
+    </footer>
 </body>
 </html>
