--- a/anshu.html
+++ b/anshu.html
@@ -148,7 +148,7 @@ header h3{
                 </div>
                 <div class="contact-info">
                     <i class="fa fa-map"></i>
-                    <span>Karachi, Pakistan</span>
+                    <span>North Nazimabad, Karachi</span>
                 </div>
             </section>
             <section class="contact">
