--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <p>
             Full Stack Developer experienced in building products for the web. Strong JavaScript knowledge, including
             modern frameworks. Proficient in RESTful API development, front-end integration, and leveraging language
-            models (LLMs) to expedite the coding process
+            models (LLMs) to expedite the development process
           </p>
         </section>
         <section class="education">
@@ -203,7 +203,9 @@
           <ul class="bullets">
             <li>Improved api response by 20% through database optimization</li>
             <li>Built and managed RESTful APIs with Strapi, boosting backend modularity and scalability</li>
-            <li>Integrated low code tools such as Retool for administrative tasks, reducing manual effort by 40%</li>
+            <li>
+              Integrated low code tools like Retool and others for administrative tasks, reducing manual effort by 40%
+            </li>
           </ul>
           <div class="exp-span">
             <h3>
