--- a/ansar.html
+++ b/ansar.html
@@ -31,18 +31,17 @@
       }
       p {
         line-height: 1.5rem;
-        font-size: 0.85rem;
+        font-size: 1rem;
       }
       .right-list {
         list-style-type: none;
       }
       section h2 {
         letter-spacing: 0.2rem;
-        font-weight: lighter;
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
       h3 {
-        font-size: 1.1rem;
+        font-size: 1rem;
         margin: 0;
       }
       h5,
@@ -50,11 +49,14 @@
         margin: 0;
       }
       .contact,
+      .objective,
       .education,
       .profile,
-      .projects,
-      .experience,
-      .open-source,
+      .skills,
+      .education,
+      .additional_skills,
+      .personal_attributes,
+      .references,
       .courses {
         border-bottom: 1px dotted rgb(89, 97, 104);
         margin-bottom: 10px;
@@ -107,7 +109,7 @@
       }
       .list {
         line-height: 1.4rem;
-        font-size: 0.9rem;
+        font-size: 1rem;
       }
       .company,
       .description {
@@ -120,7 +122,7 @@
       }
       .bullets {
         letter-spacing: normal;
-        font-size: 0.85rem;
+        font-size: 1rem;
         line-height: 1.5rem;
       }
     </style>
@@ -131,157 +133,75 @@
     </header>
     <div class="section-line"></div>
     <div class="content">
-      <div class="left">
+      <div class="right">
         <section class="contact">
           <h2>CONTACT</h2>
-          <div class="contact-info">
-            <i class="fa fa-phone"></i>
-            <a href="tel: 923132911209">+92 3132911209</a>
+          <div style="display: flex; justify-content: space-around; width: 70%">
+            <div class="contact-info">
+              <i class="fa fa-phone"></i>
+              <a href="tel: 923132911209">+92 313 2911209</a>
+            </div>
+            <div class="contact-info">
+              <i class="fa fa-envelope"></i>
+              <a href="mailto: syedansar1970@gmail.com">syedansar1970@gmail.com</a>
+            </div>
+            <div class="contact-info">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <span>Karachi, Pakistan</span>
+            </div>
           </div>
-          <div class="contact-info">
-            <i class="fa fa-envelope"></i>
-            <a href="mailto: syedansar1970@gmail.com">syedansar1970@gmail.com</a>
-          </div>
-          <!-- <div class="contact-info">
-            <i class="fa fa-github"></i>
-            <a href="https://github.com/Abrar408" target="_blank">github.com/Abrar408</a>
-          </div>
-          <div class="contact-info">
-            <i class="fa fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/syedabrar0635/" target="_blank">linkedin.com/in/syedabrar0635</a>
-          </div> -->
-          <!-- <div class="contact-info">
-                    <i class="fa fa-globe"></i>
-                    <a href="https://abrarsportfolio.netlify.app/" target="_blank">abrarsportfolio.netlify.app</a>
-                </div> -->
         </section>
-
-        <section class="profile">
+        <section class="objective">
           <h2>OBJECTIVE</h2>
           <p>
-            Full Stack Developer experienced in building products for the web. Strong JavaScript knowledge, including
-            modern frameworks. Proficient in RESTful API development, front-end integration, and leveraging language
-            models (LLMs) to expedite the coding process
+            To utilize my Arabic language proficiency and cultural understanding to effectively teach and inspire
+            students, fostering a love for the language and facilitating their academic success
           </p>
         </section>
         <section class="education">
           <h2>EDUCATION</h2>
-          <h4>MS Data Science</h4>
-          <p>NED (ongoing)</p>
-          <h4>BE Electrical Engineering</h4>
-          <p>NUST, 2020</p>
+          <ul class="bullets">
+            <li>Six years at <strong>Abdullah bin Abbas School</strong>,Taif, Saudi Arabia</li>
+            <li>18 months at <strong>Yahya bin Aktham School</strong>, Taif, Saudi Arabia</li>
+            <li><strong>Certificate of Excellence</strong> from the Ministry of Education, Taif Region</li>
+            <li><strong>Certificate of Good Character</strong> from Abdullah bin Abbas School</li>
+          </ul>
         </section>
         <section class="skills">
-          <h2>SOFT SKILLS</h2>
-          <ul class="list">
-            <li>Communication</li>
-            <li>Collaboration</li>
-            <li>Time Management</li>
-            <li>Problem solving</li>
-          </ul>
-          <h2>HARD SKILLS</h2>
-          <ul class="list">
-            <li>Typescript</li>
-            <li>ExpressJS</li>
-            <li>NestJS</li>
-            <li>MySQL</li>
-            <li>MongoDB</li>
-            <li>NextJS</li>
+          <h2>SKILLS</h2>
+          <ul class="bullets">
+            <li>Fluent in Arabic Reading, Writing and Speaking</li>
+            <li>Passionate about teaching Arabic</li>
+            <li>Ability to simplify complex concepts and make learning engaging</li>
+            <li>Understanding of linguistic connections between Urdu and Arabic</li>
+            <li>Native Urdu speaker</li>
+            <li>Can understand English</li>
           </ul>
         </section>
-      </div>
-      <div class="right">
-        <section class="experience">
-          <h2>PROFESSIONAL EXPERIENCE</h2>
-          <div class="exp-span">
-            <h3>
-              Associate Software Engineer,
-              <div class="company"><a href="https://sudofy.com/" target="_blank">Sudofy</a></div>
-            </h3>
-            <h5 class="company">Feb 2024 - Present</h5>
-          </div>
+        <section class="additional_skills">
+          <h2>ADDITIONAL SKILLS</h2>
           <ul class="bullets">
-            <li>Improved api response by 20% through database optimization</li>
-            <li>Built and managed RESTful APIs with Strapi, boosting backend modularity and scalability</li>
-            <li>Integrated low code tools such as Retool for administrative tasks, reducing manual effort by 40%</li>
-          </ul>
-          <div class="exp-span">
-            <h3>
-              Backend Engineer,
-              <div class="company"><a href="https://internativelabs.com/" target="_blank">Internative Labs</a></div>
-            </h3>
-            <h5 class="company">May 2023 - Feb 2024</h5>
-          </div>
-          <ul class="bullets">
-            <li>Enhanced collaboration, reducing integration delays by 30%</li>
-            <li>Boosted system efficiency by 20% through data processing optimizations</li>
-            <li>Resulted in improved user satisfaction due to a more responsive and reliable backend system</li>
+            <li>Can assist with BA Arabic coursework</li>
+            <li>Available for private Arabic language tutoring</li>
           </ul>
         </section>
-        <section class="projects">
-          <h2>PROJECTS</h2>
-          <div class="exp-span">
-            <h3>Easy Sale MLS</h3>
-            <!-- <a href="https://zenithnovels.com" target="_blank"
-              ><span><u>zenithnovels.com</u></span></a
-            > -->
-          </div>
+        <section class="personal_attributes">
+          <h2>PERSONAL ATTRIBUTES</h2>
           <ul class="bullets">
-            <li>
-              Developed a multi-listing service (MLS) web app providing end-to-end services including frontend, backend,
-              design and deployment
-            </li>
-            <li>Enables brokers to list and search boats, earning commission on sales</li>
-            <li>Allows the client to oversee all operations via a dedicated CMS panel</li>
-            <li>Tech Stack: Next js, Express js and PostgreSQL</li>
-            <li>Integrated Cloudinary for asset hosting, optimizing media content delivery</li>
-            <li>Deployed the app on a private server for better control and security</li>
+            <li>Excellent communication and interpersonal skills</li>
+            <li>Patient, adaptable, and culturally sensitive</li>
+            <li>Strong work ethic and commitment to student success</li>
           </ul>
         </section>
-        <section class="open-source">
-          <h2>OPEN SOURCE</h2>
-          <a href="https://www.npmjs.com/package/express-genie" target="_blank"
-            ><h3>
-              express-genie
-              <span class="description">(npm package for express js applications)</span>
-            </h3></a
-          >
-
-          <ul class="bullets">
-            <li>Automates folder and file creation, streamlining setup</li>
-            <li>Reduces development time by up to 20% through automated setup</li>
-            <li>Decreases the likelihood of configuration errors</li>
-          </ul>
+        <section class="references">
+          <h2>REFERENCES</h2>
+          <p>References and supporting documents are available on request</p>
         </section>
-        <section class="courses">
-          <h2>PROFESSIONAL COURSES</h2>
-          <div class="exp-span">
-            <h3>
-              MERN Stack Bootcamp,
-              <div class="company"><a href="https://contour-software.com/" target="_blank">Contour Software</a></div>
-            </h3>
-          </div>
-          <ul class="bullets">
-            <li>3 month industry-led bootcamp</li>
-            <li>Acquired comprehensive web development expertise</li>
-            <li>Developed practical skills through real-world applications</li>
-            <li>Endorsed by prominent industry bodies PSEB and P@ASHA</li>
-          </ul>
-        </section>
+        <p>
+          <strong>Note:</strong> Although I currently lack formal teaching experience, I am confident in my ability to
+          create a positive and effective learning environment for my students
+        </p>
       </div>
     </div>
-
-    <!-- <footer>
-      <ul class="list">
-        <li>
-          <em
-            ><p>
-              This resume is made using HTML5 and CSS3, available on my portfolio at
-              <strong>abrarsportfolio.netlify.app</strong>
-            </p></em
-          >
-        </li>
-      </ul>
-    </footer> -->
   </body>
 </html>
